objects/Traver_Project__c.object
<CustomObject>
    <description>Project/Product object used by Traver Technologies</description>
    <fields>
        <fullName>APPT_Board_Ordered__c</fullName>
        <formula>APPT_Board_Tracking_Number__c &lt;&gt; &quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APPT Board Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPT_Board_Tracking_Number__c</fullName>
        <label>APPT Board Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>if(LEN(Account__r.BillingStreet)&gt;0, Account__r.BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp;&quot;,&quot; &amp;
if(LEN(Account__r.BillingCity)&gt;0, Account__r.BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Account__r.BillingState)&gt;0, Account__r.BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Account__r.BillingPostalCode)&gt;0, Account__r.BillingPostalCode,&quot;&quot;)</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Fax_Number__c</fullName>
        <formula>Account__r.Fax</formula>
        <label>Account Fax Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <formula>Account__r.Phone</formula>
        <label>Account Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Traver_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Substatus__c</fullName>
        <label>Active Sub-status</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Airport_of_Choice__c</fullName>
        <label>Airport of Choice</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appt_Ratio_Sales__c</fullName>
        <label>Appt. Ratio - Sales</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appt_Ratio_Service__c</fullName>
        <label>Appt. Ratio - Service</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appt_fill_Rate__c</fullName>
        <label>Appt. fill Rate %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B4B_Account_Name__c</fullName>
        <label>B4B Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAC__c</fullName>
        <formula>Account__r.BAC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BAC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDI_Data__c</fullName>
        <inlineHelpText>Number of Consecutive Days BDI data has been entered</inlineHelpText>
        <label>BDI Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOU_Completion__c</fullName>
        <inlineHelpText>% of Students Completed in Initial PEP</inlineHelpText>
        <label>BOU Completion</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Period_PSG__c</fullName>
        <label>Billing Period - PSG</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Period_Traver__c</fullName>
        <description>Traver field</description>
        <label>Billing Period - Traver</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDF_PSG_Contract__c</fullName>
        <label>CDF - PSG Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMF_PSG_Contract__c</fullName>
        <label>CMF - PSG Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <formula>TEXT ( Account__r.CRM__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updated from Account record field</inlineHelpText>
        <label>CRM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_contract_uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>CSR contract Uploaded checked when CSR upload task Completed</inlineHelpText>
        <label>CSR contract uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelled_Substatus__c</fullName>
        <label>Cancelled Substatus</label>
        <picklist>
            <picklistValues>
                <fullName>Did not engage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No value in onsite training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No value in virtual coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn’t see the value in onsite or virtual support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing related reasons (not budgetary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Would not disclose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Ratio__c</fullName>
        <label>Appt. Close Ratio</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conf_Ratio__c</fullName>
        <label>Conf. Ratio</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Traver_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Loss_Date_PSG__c</fullName>
        <label>Contract Loss Date - PSG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Loss_Date_Traver__c</fullName>
        <label>Contract Loss Date - Traver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term_PSG__c</fullName>
        <label>Contract Term - PSG</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Traver__c</fullName>
        <label>Contract Term - Traver</label>
        <picklist>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type_PSG__c</fullName>
        <label>Contract Type - PSG</label>
        <picklist>
            <picklistValues>
                <fullName>Biannual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type_Traver__c</fullName>
        <label>Contarct Type - Traver</label>
        <picklist>
            <picklistValues>
                <fullName>Basic GM Program 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic GM Program 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic GM Program 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Svs Non GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Unlimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FP Training Svc&apos;s (non-GM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPTS1 - GM Pgm - 4 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPTS1 Non-GM - 4 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPTS2 - GM Pgm - 12 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPTS2 Non-GM - 12 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPTS3 - GM Pgm - 24 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPTS3 Non-GM - 24 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non GM Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Courses_Completed_Last_30_Days__c</fullName>
        <label>Courses Completed Last 30 Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Courses_Completed__c</fullName>
        <label>Courses Completed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMS_Scheduled__c</fullName>
        <label>DMS Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMS__c</fullName>
        <formula>TEXT ( Account__r.DMS__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updated from Account Record</inlineHelpText>
        <label>DMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Overview__c</fullName>
        <inlineHelpText>Import field</inlineHelpText>
        <label>DM Overview</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_PSG__c</fullName>
        <label>Days - PSG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Per_Month_Number__c</fullName>
        <formula>IF(ISPICKVAL( Traver_Days__c, &quot;1&quot;), 1, 
IF(ISPICKVAL( Traver_Days__c, &quot;2&quot;), 2,
IF(ISPICKVAL( Traver_Days__c, &quot;3&quot;), 3,
IF(ISPICKVAL( Traver_Days__c, &quot;4&quot;), 4, 
IF(ISPICKVAL( Traver_Days__c, &quot;0&quot;), 0, 
IF(ISPICKVAL( Traver_Days__c, &quot;0.33&quot;), 0.33, 0))))))</formula>
        <label>Days Per Month Number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Contracting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Contracting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Import field</inlineHelpText>
        <label>EO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPC_Assigned__c</fullName>
        <formula>EPC__c&lt;&gt; &quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EPC Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPC_Intro_Call__c</fullName>
        <inlineHelpText>Box checked when EPC Intro Call Completed</inlineHelpText>
        <label>EPC Intro Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EPC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Traver</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Traver_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_of_Term_Date_PSG__c</fullName>
        <formula>DATE (  
/*YEAR*/  
YEAR(Install_Date_PSG__c) + FLOOR((MONTH(Install_Date_PSG__c) + Contract_Term_PSG__c - 1)/12),
/*MONTH*/  
CASE(MOD(MONTH(Install_Date_PSG__c) + Contract_Term_PSG__c, 12 ), 0, 12, MOD(MONTH(Install_Date_PSG__c)+ Contract_Term_PSG__c, 12 )),  
/*DAY*/  
MIN(DAY(Install_Date_PSG__c),  CASE(MOD(MONTH(Install_Date_PSG__c) + Contract_Term_PSG__c,12), 9, 30, 4, 30, 6, 30, 11, 30, 2,  
/* return max days for February dependent on if end date is leap year */  
IF(MOD(YEAR(Install_Date_PSG__c) + FLOOR((MONTH(Install_Date_PSG__c) + Contract_Term_PSG__c)/12), 400) = 0 || (MOD(YEAR(Install_Date_PSG__c) + FLOOR((MONTH(Install_Date_PSG__c) + Contract_Term_PSG__c)/12), 4) = 0 
&amp;&amp; MOD(YEAR(Install_Date_PSG__c) + FLOOR((MONTH(Install_Date_PSG__c) + Contract_Term_PSG__c)/12), 100) &lt;&gt; 0  ), 29,28), 31))  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End of Term Date - PSG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Term_Date_Traver__c</fullName>
        <formula>Project_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End of Term Date - Traver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency_PSG__c</fullName>
        <label>Frequency - PSG</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <label>Hotel</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Tel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP Tel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Store_Visit_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Store Visit Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Upfront_Traver__c</fullName>
        <label>Initial Upfront - Traver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Date_PSG__c</fullName>
        <label>Install Date - PSG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Date_Traver__c</fullName>
        <formula>Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field input comes from Project Start Date</inlineHelpText>
        <label>Install Date - Traver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intro_Call_Completed__c</fullName>
        <label>Intro Call Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key_CAM__c</fullName>
        <formula>Account__r.Key_CAM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key CAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_DOS__c</fullName>
        <formula>Account__r.Key_DOS__r.FirstName&amp;&quot; &quot;&amp;Account__r.Key_DOS__r.LastName</formula>
        <label>Key DOS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Rep__c</fullName>
        <formula>Account__r.Key_Rep__r.FirstName&amp;&quot; &quot;&amp;Account__r.Key_Rep__r.LastName</formula>
        <label>Key Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit__c</fullName>
        <label>Kit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <description>Traver</description>
        <inlineHelpText>Import record field.</inlineHelpText>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lets_Get_Started__c</fullName>
        <description>Traver</description>
        <inlineHelpText>Traver field to trigger work flow task creation of Let&apos;s get Started process</inlineHelpText>
        <label>Lets Get Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MGR_Enrolled_in_boot_camp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box Updated when MGR Enrolled in Boot Camp Updated</inlineHelpText>
        <label>MGR Enrolled in boot camp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Traver</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Traver_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee_PSG__c</fullName>
        <label>Monthly Fee - PSG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee_Traver__c</fullName>
        <label>Monthly Fee - Traver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>One_Time_PSG__c</fullName>
        <label>One Time - PSG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Onsite_Days_Forfeited_PSG__c</fullName>
        <label>Onsite Days Forfeited - PSG</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Days_Forfeited_Traver__c</fullName>
        <label>Onsite Days Forfeited - Traver</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Days_Used_PSG__c</fullName>
        <label>Onsite Days Used - PSG</label>
        <summarizedField>Traver_Coaching__c.Number_of_Days_PSG__c</summarizedField>
        <summaryFilterItems>
            <field>Traver_Coaching__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Traver_Coaching__c.Traver_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Onsite_Days_Used_Traver__c</fullName>
        <label>Onsite Days Used -Traver</label>
        <summarizedField>Traver_Coaching__c.Number_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Traver_Coaching__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Traver_Coaching__c.Traver_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consulting_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consulting_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partial_Month_Monday_Start__c</fullName>
        <inlineHelpText>Partial Month Process - Date of Next Monday to start the EPC task processes, emails and text.</inlineHelpText>
        <label>Partial Month - Monday Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partial_Month_Remaining_Mondays__c</fullName>
        <inlineHelpText>Partial Month.   Number of remaining Monday&apos;s left in the partial month.   This number will trigger the EPC task, calls and texts based on number of months remaining.  

Example If 1 is entered the EPC process for this month will start at week 4.</inlineHelpText>
        <label>Partial Month - Remaining Mondays</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartyID_Del__c</fullName>
        <formula>Account__r.Parent.PartyID__c</formula>
        <label>PartyID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartyID__c</fullName>
        <label>PartyID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payroll Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent_of_Days_Used__c</fullName>
        <description>Old calc - IF( ISNULL(Total_Days_Contracted_Traver__c), 0, NULLVALUE(Onsite_Days_Used_Traver__c, 0) / Total_Days_Contracted_Traver__c )

IF( ISNULL( Total_Days_Contracted_Traver__c ), 0, (NULLVALUE( Onsite_Days_Used_Traver__c,0) + NULLVALUE(Onsite_Days_Forfeited_Traver__c,0))* Total_Days_Contracted_Traver__c/100)</description>
        <formula>IF( ISNULL( Total_Days_Contracted_Traver__c ), 0, (NULLVALUE( Onsite_Days_Used_Traver__c,0) + NULLVALUE(Onsite_Days_Forfeited_Traver__c,0))/Total_Days_Contracted_Traver__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total days purchased minus total days logged as completed.    Will only adjust if days are logged.</inlineHelpText>
        <label>% of Days Used - Traver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Coach_Call__c</fullName>
        <label>Performance Coach Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Process_Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Coach</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Traver</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Traver_Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDL</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Days_Remaining__c</fullName>
        <formula>Project_End_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Days Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Duration__c</fullName>
        <formula>Project_End_Date__c - Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <inlineHelpText>Date the project will end.   Used to cancel automated task and emails.</inlineHelpText>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <inlineHelpText>Day the project will start - Trigger for automated task and emails</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Miss__c</fullName>
        <label>Projected Miss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked project needs to be reassigned.</inlineHelpText>
        <label>Reassign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT (Account__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Target_PSG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Target - PSG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Target_Traver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Target - Traver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal in Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roll_Call_Date_PSG__c</fullName>
        <label>Roll Call Date - PSG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roll_Call_Date_Traver__c</fullName>
        <label>Roll Call Date - Traver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Type_PSG__c</fullName>
        <label>Sales Type - PSG</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion (dn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion (up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month to Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Type_Traver__c</fullName>
        <label>Sales Type - Traver</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion (dn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion (up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month to Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Schedule_Ratio__c</fullName>
        <label>Schedule Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceEdge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceEdge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_PSG__c</fullName>
        <label>Services - PSG</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServiceEdge</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Services_Traver__c</fullName>
        <label>Services - Traver</label>
        <picklist>
            <picklistValues>
                <fullName>20 Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Unlimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Optimization University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Store Visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boot Camp Seats</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Show_Ratio__c</fullName>
        <label>Show Ratio</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Contact_sent_to_BI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Snapshot Contact sent to BI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snapshot_Installed__c</fullName>
        <label>Snapshot Installed</label>
        <type>Date</type>
    </fields>
</CustomObject>